# Compiladores

Proj1/: Makefile  factorial.c  factorial.diy  inicial.y  iter.diy  mean.diy  rand.diy  recurs.diy  string  string.c  string.diy
Proj1/base/: CMakeLists.txt  Makefile  diy  diy.l  diy.y  inicial.y  lex.yy.c  string.c  test.diy  y.output  y.tab.c  y.tab.h  yyselect.c
Proj1/base/diy files/: factorial.diy  iter.diy  rand.diy  recurs.diy  string.diy
Proj1/base/tests/: test1.out  test2.out  test3.out  test4.out  test5.out
Proj2/: Makefile  diy.l  diy.y  inicial.y  inicial_backup.y  inicial_fuckedup.y  test.txt  test_declarations.txt
Proj2/tests/: factorial.diy
Proj3/: DoneList  diy  diy.brg  diy.y  proj.brg  todo.txt  y.tab.c
Proj3/exs/: Makefile  hello.diy  helloBRG.diy
Proj3/exs/Test/: Tbreak.diy  Texterns.asm  Tlocal.asm  Toperation.asm  Tvariables.asm  Tvariables.diy  test.sh
Proj3/lib/: postfix.h
Proj3/run/: iter.asm
